--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "payload:seed": "bun run src/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@payloadcms/db-mongodb": "^3.34.0",
     "@payloadcms/next": "^3.34.0",
     "@payloadcms/payload-cloud": "^3.34.0",
     "@payloadcms/richtext-lexical": "^3.34.0",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -31,10 +33,13 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "payload": "^3.34.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
